--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -48,6 +48,14 @@
     virtualenv: /opt/borgmatic
   when: borg_python_packages is defined
 
+- name: Create /usr/local/bin
+  file:
+    path: /usr/local/bin
+    owner: root
+    group: root
+    mode: 0755
+    state: directory
+
 - name: Create borgmatic command in /usr/local/bin
   copy:
     content: |
