Updated cron timer units for mailing support

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,6 +18,7 @@ borg_retention_policy:
   keep_monthly: 6
 borg_version: false
 borgmatic_timer_cron_name: "borgmatic"
+borgmatic_timer_cron_file: "{{ borgmatic_timer_cron_name }}"
 borgmatic_timer: cron
 borgmatic_timer_hour: "{{ range(0, 5) | random(seed=inventory_hostname) }}"
 borgmatic_timer_minute: "{{ range(0, 59) | random(seed=inventory_hostname) }}"
